--- a/editor.html
+++ b/editor.html
@@ -5,33 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>GLSL Editor</title>
 		<link href="/favicon.gif" rel="shortcut icon"/>
-		<style>
-			body {
-				height: 100%;
-    			margin: 0;
-	  			background: #171e22;
-			}
-			#glsl_editor {
-				height: 100%;
-			}
-		</style>
+		<link type="text/css" rel="stylesheet" href="css/editor.css">
 	</head>
 	<body>
 		<div id="glsl_editor"></div>
 	</body>
-
-	<link type="text/css" rel="stylesheet" href="css/glslEditor.css">
-    <script type="text/javascript" src="js/glslEditor.js"></script>
-    <script type="text/javascript">
-    	window.glslEditor = new GlslEditor('#glsl_editor', {
-    		canvas_size: 720,
-            canvas_draggable: true,
-            canvas_resizable: true,
-    		theme: 'material',
-            watchHash: true,
-            fileDrops: true,
-    		menu: true
-    	});
-        document.body.style.backgroundColor = window.getComputedStyle(glslEditor.editor.getWrapperElement(),null).getPropertyValue('background-color');
-    </script>
+	<link type="text/css" rel="stylesheet" href="node_modules/glslEditor/build/glslEditor.css">
+    <script type="text/javascript" src="node_modules/glslEditor/build/glslEditor.min.js"></script>
+    <script type="text/javascript" src="js/editor.js"></script>
 </html>
